--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,11 @@
 <html lang="en-us">
 	<head>
 	</head>
-
-
 	<body>
+		<div id="root"> </div>
 
-		<div id="root">
-		</div>
 
 		<script src="/build/app.js"> </script>
-
 	</body>
 
 
